# rpg

./: .gitignore  Cargo.toml  backgrounds.aseprite  character4.aseprite  equipments.aseprite  icon.aseprite  map.txt  map1.txt  map2.txt  map3.txt  map_easy_cluster.txt  map_easy_guard.txt  map_easy_river.txt  map_easy_surrounded.txt  map_elite.txt  map_elite2.txt  map_test.txt  map_vertical_slice.txt  skill_tree.json  testsavefile.json
aseprite/: backgrounds.aseprite  character4.aseprite  effects.aseprite  equipments.aseprite  font.aseprite  icon.aseprite  map_icons.aseprite  portrait_bg.aseprite  portraits.aseprite  ry-64.gpl  status.aseprite  terrain_atlas.aseprite  terrain_objects.aseprite  user_interface.aseprite  water.aseprite  water_atlas.aseprite  water_beach_w.aseprite
examples/: letterbox.rs
maps/: easy_map.json  huldra.json  medium_map.json  medium_map_2.json  ogre_room.json  test.json
src/: action_button.rs  activity_popup.rs  banner.rs  base_ui.rs  bot.rs  character_sheet.rs  chest_scene.rs  conditions_ui.rs  core.rs  d20.rs  data.rs  drawing.rs  equipment_ui.rs  game_over_scene.rs  game_ui.rs  game_ui_components.rs  game_ui_connection.rs  game_ui_orchestration.rs  grid.rs  init.rs  init_fight_map.rs  lib.rs  main.rs  map_data.rs  map_scene.rs  non_combat_ui.rs  pathfind.rs  resources.rs  rest_scene.rs  settings.rs  shop_scene.rs  skill_tree.rs  sounds.rs  stats_ui.rs  target_ui.rs  textures.rs  transition_scene.rs  util.rs  victory_scene.rs
