[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
macroquad = { version = "0.4", features = ["audio"] }
indexmap = { version = "2.7.1", features = ["serde"] }
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
pollster = "0.4.0"
lazy_static = "1.5.0"